--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "alt": "^0.18.6",
     "flux": "^3.1.2",
+    "jquery": "^3.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "toastr": "^2.1.2"
   },
   "devDependencies": {
     "react-scripts": "1.0.10"
