--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "alt": "^0.18.6",
     "async": "^1.5.0",
     "body-parser": "^1.14.1",
+    "bootswatch": "^3.3.7",
     "colors": "^1.1.2",
     "compression": "^1.6.0",
     "express": "^4.13.3",
@@ -56,6 +57,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.7",
+    "standard": "^10.0.2",
     "utf-8-validate": "3.0.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
