--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.13.3",
     "express-session": "1.15.3",
     "history": "^1.13.0",
+    "jquery": "^3.2.1",
     "mongoose": "^4.2.5",
     "morgan": "^1.6.1",
     "passport": "0.3.2",
@@ -35,6 +36,7 @@
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
+    "toastr": "^2.1.2",
     "underscore": "^1.8.3",
     "xml2js": "^0.4.15"
   },
