--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "compression": "^1.6.0",
     "express": "^4.13.3",
     "express-session": "1.15.3",
+    "gulp": "^3.9.1",
     "history": "^1.13.0",
     "jquery": "^3.2.1",
     "mongoose": "^4.2.5",
