--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp": "^3.9.1",
     "history": "^1.13.0",
     "jquery": "^3.2.1",
+    "localStorage": "^1.0.3",
     "mongoose": "^4.2.5",
     "morgan": "^1.6.1",
     "passport": "0.3.2",
